01 July 2008

* tmux 0.4 released.

29 June 2008

* Zombie windows. These are not closed when the child process dies. May be
  set for a window with the new "remain-on-exit" option; the default setting
  of this flag for new windows may be set with the "remain-by-default" session
  option.

  A window may be restarted with the respawn-window command:

  	respawn-window [-k] [command]
	
  If -k is given, any existing process running in the window is killed;
  if command is omitted, the same command as when the window was first
  created is used.

27 June 2008

* Handle nonexistent session or client to -t properly.

25 June 2008

* select-prompt command to allow a window to be selected at a prompt. Only
  windows in the current session may be selected. Bound to ' by default.
  Suggested by merdely.
* move-window command. Requested by merdely.
* Support binding alt keys (prefixed with M-). Change default to use
  C- for ctrl keys (^ is still accepted as an alternative).
* Slim down default key bindings: support lowercase only.
* Handle escaped keys properly (parse eg \033b into a single key code) and
  use this to change copy mode next/previous work to M-f and M-b to match
  emacs.

24 June 2008

* Next word (C-n/w) and previous word (C-b/b) in copy mode.

23 June 2008

* list-commands command (alias lscm).
* Split information about options into a table and use it to parse options
  on input (allowing abbreviations) and to print them with show-options
  (meaning that bell-action gets a proper string). This turned out a bit ugly
  though :-/.

22 June 2008

* Do not translate black and white into default if the terminal supports
  default colours. This was nice to force programs which didn't use default
  colours to be properly transparent in rxvt/aterm windows with a background
  image, but it causes trouble if someone redefines the default foreground and
  background (to have black on white or something).

21 June 2008
